--- a/src/blocks/profile/__avatar-container/profile__avatar-container.css
+++ b/src/blocks/profile/__avatar-container/profile__avatar-container.css
@@ -1,5 +1,6 @@
 .profile__avatar-container {
   background-color: #000;
+  background-image: url(../../../images/icons/edit-avatar.svg);
   background-position: 50%;
   background-repeat: no-repeat;
   border-radius: 60px;
