--- a/src/blocks/profile/__avatar/profile__avatar.css
+++ b/src/blocks/profile/__avatar/profile__avatar.css
@@ -1,12 +1,10 @@
 .profile__avatar {
-  background-image: url(../../../images/icons/edit-avatar.svg);
   background-position: 50%;
   background-repeat: no-repeat;
+  background-size: cover;
   border-radius: inherit;
   width: 100%;
   height: 100%;
-  object-fit: cover;
-  object-position:center center;
   transition:opacity .5s ease-in-out;
   cursor:pointer;
 }
